gccida/c3/record_conflicts
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_conflicts/src/global.c:1852:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)allocno_vec[len]].hard_reg_conflicts |= hard_regs_live; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_conflicts/src/obj/global.o] Error 1
